# area-code-locator

./: .gitignore  README.md  data.json  pyproject.toml  requirements.txt
examples/: lookup_example.py
src/area_code_locator/: __init__.py  area_code_locator.py  cli.py
tests/: test_area_code_locator.py
