[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "area-code-locator"
version = "0.1.0"
description = "A Python library for locating area codes from latitude and longitude coordinates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Area Code Locator Contributors"},
]
keywords = ["geospatial", "area-codes", "telephony", "gis", "geopandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "pyproj>=3.4.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/area-code-locator"
Repository = "https://github.com/yourusername/area-code-locator"
Issues = "https://github.com/yourusername/area-code-locator/issues"

[tool.setuptools]
packages = ["area_code_locator"]

[tool.setuptools.package-dir]
"" = "src"